[gd_scene format=3 uid="uid://chud7k2m9p4qt"]

[ext_resource type="Script" path="res://Scripts/UI/HUD.gd" id="1_hud"]
[ext_resource type="Texture2D" path="res://Sprites/UI/ui_key_icon.png" id="2_key"]
[ext_resource type="Texture2D" path="res://Sprites/UI/ui_special_icon.png" id="3_special"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 640.0
offset_bottom = 360.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_constants/separation = 5

[node name="ScrapContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="KeyContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="KeyIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/KeyContainer"]
layout_mode = 2
texture = ExtResource("2_key")
stretch_mode = 5

[node name="KeyLabel" type="Label" parent="MarginContainer/VBoxContainer/KeyContainer"]
layout_mode = 2
text = "0"

[node name="SpecialContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="SpecialIcon" type="TextureRect" parent="MarginContainer/VBoxContainer/SpecialContainer"]
layout_mode = 2
texture = ExtResource("3_special")
stretch_mode = 5

[node name="SpecialLabel" type="Label" parent="MarginContainer/VBoxContainer/SpecialContainer"]
layout_mode = 2
text = "Ready"
